--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "description": "Library for working with WebAudio API",
     "main": "schroeder.js",
     "scripts": {
-        "test": "node tests/index.js"
+        "start": "node build.js",
+        "test": "npm start && testem",
+        "postinstall": "bower install"
     },
     "devDependencies": {
-        "simple-test-framework": "*",
         "concat-files": "*"
     },
     "repository": {
