--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "schroeder.js",
     "scripts": {
         "start": "node build.js",
-        "test": "npm start && testem",
+        "test": "npm start && testem ci",
         "postinstall": "bower install"
     },
     "devDependencies": {
